# event_capture

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
msg/: Camera.msg  EventCaptureStamped.msg  KeyEventCaptureStamped.msg  MouseEventCapture.msg  MouseEventCaptureStamped.msg
src/: event_capture_tool.cpp  event_capture_tool.hpp
