<?xml version="1.0"?>
<package format="2">

  <name>event_capture</name>
  <version>0.0.0</version>
  <description>The event_capture package</description>
  <license>Apache 2.0</license>

  <maintainer email="h_ohta@tier4.jp">Hiroki OTA</maintainer>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
